@@ -1,3 +1,6 @@
+Oct 01, 2015 - chris ---------------------------------------------------
+o Remote URL identifier ham:// was changed to ups://
+
 Sep 29, 2015 - chris ---------------------------------------------------
 o Removed ups_key_get_approximate_match_type
 o Renamed ups_db_get_key_count to ups_db_count
